test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-owned-from-oknil-unmanaged.good
init-field-arg-nonnil-owned-from-oknil-unmanaged.chpl:9: In initializer:
init-field-arg-nonnil-owned-from-oknil-unmanaged.chpl:10: error: invalid copy-initialization
init-field-arg-nonnil-owned-from-oknil-unmanaged.chpl:10: error: cannot create an owned variable from an unmanaged class instance
  init-field-arg-nonnil-owned-from-oknil-unmanaged.chpl:14: called as MyRecord.init(rhs: borrowed MyClass)
